C:\Users\faraj\Desktop\evil-game

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div class="top-nav">
-        <a href="main.html">Home</a>
+    <div class="top-nav"><!--זה הסרגל העליון בעמוד - הוא קבוע בכל העמודים-->
+        <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
         <a href="registration.html">Registration</a>
         <a href="contact.html">Contact</a>
