--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
 </head>
  <body>
-    <div class="top-nav">
-        <a href="main.html">Home</a>
+    <div class="top-nav"><!--זה הסרגל העליון בעמוד והוא קבוע בגל העמודים-->
+        <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
         <a href="registration.html">Registration</a>
         <a href="contact.html">Contact</a>
