--- a/animation.html
+++ b/animation.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
         <a href="registration.html">Registration</a>
         <a href="contact.html">Contact</a>
@@ -20,7 +20,7 @@
         <div class="start">HELL UNIVERSITY</div>
         <div class="player"></div>
         <div class="end">FREEDOM</div>
-        <!-- Complex maze walls -->
+        <!--זה החלק שבוא מוגדים ה"גדרות" של אותו "מבוך" ע"ב אתר באינטרנט שמצאתי-->
         <div class="wall" style="grid-area: 1 / 1 / span 6 / span 4"></div>
         <div class="wall" style="grid-area: 8 / 3 / span 4 / span 6"></div>
         <div class="wall" style="grid-area: 14 / 1 / span 4 / span 8"></div>
