--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
         <a href="registration.html">Registration</a>
         <a href="contact.html">Contact</a>
