C:\Users\faraj\Desktop\evil-game

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </div>
     <div class="container">
         <header>
-            <h1>FarGame: The Ultimate Distance Challenge</h1>
+            <h1>Evil-Game: The Ultimate maze Challenge</h1>
         </header>
         <div class="game-intro">
-            <p>Prepare yourself for the most intense distance gaming experience ever created. FarGame pushes the limits of your spatial awareness and strategic thinking.</p>
+            <p>Prepare yourself for the most intense maze gaming experience ever created by devilgan. Evil-Game pushes the limits of your spatial awareness and strategic thinking.</p>
         </div>
         <a href="registration.html" class="cta-button">Join the Challenge</a>
         <div class="feature-grid">
             <div class="feature">
-                <h3>Compete Globally</h3>
+                <h3>Compete Globally</h3><!--השתמשתי בצאט גי פי טי לטובת הניסוח המקצועי של המלל-->
                 <p>Challenge players from around the world in our distance-based competition.</p>
             </div>
             <div class="feature">
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="down-nav">
+    <div class="down-nav"> <!-- הקישורים קופצים לעמודים שליבאמת-->
         <a href="https://wa.me/0512160683">whatsup</a>
         <a href="https://www.instagram.com/faraj_ganem">instagram</a>
         <a href="https://github.com/devilgan">github</a>
