--- a/leaderboard.html
+++ b/leaderboard.html
@@ -17,7 +17,7 @@
         <a href="about.html">About</a>
     </div>
 
-    <div class="container">
+    <div class="container"> <!--i used chat gpt to ganerate the data showed here {to make it randomly}-->
         <h1>Nightmare Maze Survivors</h1>
         <table>
             <thead>
