--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div class="top-nav"><!--זה הסרגל העליון בעמוד - הוא קבוע בכל העמודים-->
+    <div class="top-nav">
         <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
         <a href="registration.html">Registration</a>
