--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <h1>Evil-Game: The Ultimate maze Challenge</h1>
         </header>
         <div class="game-intro">
+            <div class="ira-logo">
+            <img src="logo.jpg" alt="moving-logo" class="logoo" width="100px" height="70px">
+            </div>
             <p>Prepare yourself for the most intense maze gaming experience ever created by devilgan. Evil-Game pushes the limits of your spatial awareness and strategic thinking.</p>
         </div>
         <a href="registration.html" class="cta-button">Join the Challenge</a>
