--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,8 @@
                 <textarea id="message" rows="5" required></textarea>
             </div>
             <button type="submit" class="submit-btn">Send Message</button>
+            <br>
+            <button type="reset" class="submit-btn">reset</button>
         </form>
     </div>
     <div class="down-nav">
