--- a/animation.html
+++ b/animation.html
@@ -18,7 +18,8 @@
     </div>
     <div class="maze">
         <div class="start">HELL UNIVERSITY</div>
-        <div class="player"></div>
+        <div class="player-luigi"></div>
+        <div class="player-mario"></div>
         <div class="end">FREEDOM</div><!--זה החלק שבוא מוגדים ה"גדרות" של אותו "מבוך" ע"ב אתר באינטרנט שמצאתי - לא זכור איזה אחד-->
         <div class="wall" style="grid-area: 1 / 1 / span 6 / span 4"></div>
         <div class="wall" style="grid-area: 8 / 3 / span 4 / span 6"></div>
