--- a/leaderboard.html
+++ b/leaderboard.html
@@ -32,35 +32,35 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>ShadowRunner</td>
+                    <td>Shadow_elhanan</td>
                     <td>42:13</td>
                     <td>1837 m</td>
                     <td>9</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>NightmarePro</td>
+                    <td>Nightmare_shira</td>
                     <td>39:57</td>
                     <td>1726 m</td>
                     <td>8</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>HorrorMaster</td>
+                    <td>Horror_artur</td>
                     <td>37:22</td>
                     <td>1654 m</td>
                     <td>7</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>MazeEscaper</td>
+                    <td>Escaper_mishel</td>
                     <td>35:45</td>
                     <td>1542 m</td>
                     <td>6</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>DarkSurvivor</td>
+                    <td>Dark_shalom</td>
                     <td>33:10</td>
                     <td>1423 m</td>
                     <td>5</td>
