--- a/registration.html
+++ b/registration.html
@@ -24,6 +24,10 @@
                 <input type="text" id="name" required>
             </div>
             <div class="form-group">
+                <label for="num">phone number</label>
+                <input type="number" id="number" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" id="email" required>
             </div>
