--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+    <video autoplay loop muted playsinline>
+        <source src="cybervid.mp4" type="video/mp4">
+    </video>
     <div class="top-nav">
         <a href="index.html">Home</a>
         <a href="info.html">Game Info</a>
