--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
  <body>
     <video autoplay loop muted playsinline>
-        <source src="cybervid.mp4" type="video/mp4">
+        <source src="cybervid.webm" type="video/mp4">
     </video>
     <div class="top-nav"><!--זה הסרגל העליון בעמוד והוא קבוע בגל העמודים-->
         <a href="index.html">Home</a>
