update 6.0.0 lastttt oneee 2

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
     </div>
     <div class="down-nav"> <!-- הקישורים קופצים לעמודים שליבאמת-->
-        <a href="https://wa.me/0512160683">whatsup</a>
-        <a href="https://www.instagram.com/faraj_ganem">instagram</a>
-        <a href="https://github.com/devilgan">github</a>
+        <a href="https://wa.me/0512160683">Whatsapp</a>
+        <a href="https://www.instagram.com/faraj_ganem">Instagram</a>
+        <a href="https://github.com/devilgan">Github</a>
     </div>
  </body>
 </html>
