--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
         </form>
     </div>
     <div class="down-nav">
-        <a href="https://wa.me/0512160683">whatsup</a>
-        <a href="https://www.instagram.com/faraj_ganem">instagram</a>
-        <a href="https://github.com/devilgan">github</a>
+        <a href="https://wa.me/0512160683">Whatsapp</a>
+        <a href="https://www.instagram.com/faraj_ganem">Instagram</a>
+        <a href="https://github.com/devilgan">Github</a>
     </div>
 </body>
 </html>
